--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@coreui/utils": "^2.0.1",
     "@ng-bootstrap/ng-bootstrap": "^14.1.0",
     "chart.js": "^3.9.1",
+    "file-saver": "^2.0.5",
     "ngx-bootstrap": "^10.2.0",
     "ngx-perfect-scrollbar": "^10.1.1",
     "ngx-spinner": "^15.0.1",
@@ -41,6 +42,7 @@
     "@angular-devkit/build-angular": "^15.2.3",
     "@angular/cli": "~15.2.3",
     "@angular/compiler-cli": "^15.2.0",
+    "@types/file-saver": "^2.0.5",
     "@types/jasmine": "~4.3.0",
     "jasmine-core": "~4.5.0",
     "karma": "~6.4.0",
