--- a/angular.json
+++ b/angular.json
@@ -106,7 +106,8 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.scss"
+              "src/styles.scss",
+              "node_modules/@swimlane/ngx-datatable/assets/icons.css"
             ],
             "scripts": []
           }
