--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "file-saver": "^2.0.5",
     "ngx-bootstrap": "^10.2.0",
     "ngx-perfect-scrollbar": "^10.1.1",
+    "ngx-select-ex": "^8.0.1",
     "ngx-spinner": "^15.0.1",
     "ngx-toastr": "^16.1.0",
     "rxjs": "~7.8.0",
